paramètres de config lus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# outil LIMS
+lims.username=restfuluser4
+lims.password=Ords123456@
+lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
