--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 lims.username=restfuluser4
 lims.password=Ords123456@
 lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
+
+
+server.port=8090 
