--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ lims.password=Ords123456@
 lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
 
 
-server.port=8090 
+# SPRING
+#server.port=8090
+spring.main.web-application-type=none
