--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,20 @@
     </parent>
     <groupId>com.telino</groupId>
     <artifactId>lims-data-extractor</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>lims-data-extractor</name>
-    <description></description>
+    <version>staging-environment</version>
+       <packaging>jar</packaging>
+       <name>lims-data-extractor</name>
+       <description></description>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+       <properties>
+           <java.version>1.8</java.version>
+       </properties>
 
-    <dependencies>
-        <!--		<dependency>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-data-jpa</artifactId>
-                </dependency>-->
+       <dependencies>
+           <!--		<dependency>
+                       <groupId>org.springframework.boot</groupId>
+                       <artifactId>spring-boot-starter-data-jpa</artifactId>
+                   </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
