--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 lims.username=restfuluser4
 lims.password=Ords123456@
 lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
-lims.jourDeBut=2017/03/01
-lims.jourFin=2017/03/01
+lims.jourDeBut=
+lims.jourFin=
 
 # SPRING
 server.port=8090
