gestion de l'erreur http 401 (unauthorized)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 # outil LIMS
 lims.username=restfuluser4
-lims.password=Ords123456@
-lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
+lims.password=Ords123456@v
+# dev
+# lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
+#   recette
+lims.url=https://svm000136.siaap.fr/apex/siaap/api/v1.0/results
 lims.jourDeBut=
 lims.jourFin=
 
