dernier changements suite au tests sur l'env de recette du SIAAP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # outil LIMS
 lims.username=restfuluser4
-lims.password=Ords123456@v
+lims.password=Ords123456@
 # dev
-# lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
+#lims.url=https://app-dev1-oci.agilab.net/apex2/siaap/api/v1.0/results
 #   recette
 lims.url=https://svm000136.siaap.fr/apex/siaap/api/v1.0/results
 lims.jourDeBut=
